--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "HelloCordova",
     "version": "1.0.0",
     "description": "A sample Apache Cordova application that responds to the deviceready event.",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
